# ikatechis

./: .gitignore  README.md  SURGICAL_GUIDE_README.md  pyproject.toml  requirements.txt
docs/: Claude.md  USAGE.md  implementation_progress.md  project_plan.md
examples/: README.md
examples/basic_single_implant/: README.md
examples/bilateral_implants/: README.md
examples/full_arch/: README.md  implants.json
surgical_guide_generator/: __init__.py  boolean_ops.py  cli.py  config.py  generator.py  inspection_windows.py  mesh_io.py  repair.py  sdf_offset.py  sleeve_channels.py  validation.py
surgical_guide_generator/tests/: __init__.py  test_boolean_ops.py  test_cli.py  test_config.py  test_generator.py  test_inspection_windows.py  test_integration.py  test_mesh_io.py  test_repair.py  test_sleeve_channels.py  test_validation.py
surgical_guide_generator/tests/fixtures/: README.md  anterior_implant.json  bilateral_implants.json  generate_test_meshes.py  single_implant.json
